---------------------------------------------------------------------------------------------------
Version: 0.1.5
Date: 22. 04. 2019
  Bugfixes:
    - Handle missing render objects gracefully
---------------------------------------------------------------------------------------------------
Version: 0.1.4
Date: 15. 04. 2019
  Bugfixes:
    - Only report errors in singleplayer (since messages don't work in multiplayer)
---------------------------------------------------------------------------------------------------
Version: 0.1.3
Date: 14. 04. 2019
  Changes:
    - Colours for some of the Py mods (thanks wchristian)
---------------------------------------------------------------------------------------------------
Version: 0.1.2
Date: 14. 04. 2019
  Bugfixes:
    - Fixed a possible fatal error when light direction goes negative
---------------------------------------------------------------------------------------------------
Version: 0.1.1
Date: 14. 04. 2019
  Bugfixes:
    - Fixed error handling (errors would stop the game rather than showing a message)
---------------------------------------------------------------------------------------------------
Version: 0.1.0
Date: 13. 04. 2019
  Changes:
    - Labs light up in patterns centered around the player
    - Updates are spread over 6 ticks instead of 5, slightly compensating for increased complexity
---------------------------------------------------------------------------------------------------
Version: 0.0.10
Date: 12. 04. 2019
  Changes:
    - Log missing ingredient colours on load
  Bugfixes:
    - Stopped indexing a table by LuaEntity (this should prevent RAM leak)
    - Mutable state is all stored in global (this should prevent desyncs)
---------------------------------------------------------------------------------------------------
Version: 0.0.9
Date: 11. 04. 2019
  Changes:
    - Colours mapped by icons instead of tech names (thanks sparr for the idea)
    - Support for Bob's Tech