@@ -3,6 +3,7 @@ Version: 0.1.5
 Date: 22. 04. 2019
   Bugfixes:
     - Handle missing render objects gracefully
+    - Fixed multiplayer check (thanks Klonan)
 ---------------------------------------------------------------------------------------------------
 Version: 0.1.4
 Date: 15. 04. 2019
